compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__sourcemaps__sourcemap_with_complex_case_expression.snap
---
source: compiler-core/src/javascript/tests/sourcemaps.rs
expression: "\npub fn go(one, other) {\n  case one, other {\n    Ok(1), Error(_) -> 1\n    Ok(_), _ -> 2\n    Error(_), Ok(2) -> 3\n    _, _ -> 4\n  }\n}\n"
---
----- SOURCE CODE
0 |
1 |pub fn go(one, other) {
2 |  case one, other {
3 |    Ok(1), Error(_) -> 1
4 |    Ok(_), _ -> 2
5 |    Error(_), Ok(2) -> 3
6 |    _, _ -> 4
7 |  }
8 |}

----- COMPILED JAVASCRIPT
0 |//# sourceMappingURL=mod.mjs.map
1 |import { Ok, Error } from "../gleam.mjs";
2 |
3 |export function go(one, other) {
4 |  if (one instanceof Ok) {
5 |    if (other instanceof Error && one[0] === 1) {
6 |      return 1;
7 |    } else {
8 |      return 2;
9 |    }
10 |  } else if (other instanceof Ok && other[0] === 2) {
11 |    return 3;
12 |  } else {
13 |    return 4;
14 |  }
15 |}

----- SOURCE MAP
File: my/mod.mjs
Sources: mod.gleam
Mappings:
----- 


⏷
//# sourceMappingURL=mod.mjs.map
import { Ok, Error } from "../gleam.mjs";


----- 
pub fn go(one, other) {
  
⏷
export function go(one, other) {
  
----- 
case 
⏷

----- 
one, other {
    Ok(1), Error(_) -> 
⏷
if (one instanceof Ok) {
    if (other instanceof Error && one[0] === 1) {
      
----- 
1
    Ok(_), _ -> 
⏷
return 1;
    } else {
      
----- 
2
    Error(_), Ok(2) -> 
⏷
return 2;
    }
  } else if (other instanceof Ok && other[0] === 2) {
    
----- 
3
    _, _ -> 
⏷
return 3;
  } else {
    
----- 
4
  }
}
⏷
return 4;
  }
}
----- 


⏷


-----
