compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__sourcemaps__sourcemap_with_tail_recursive_functions.snap
---
source: compiler-core/src/javascript/tests/sourcemaps.rs
expression: "\npub fn wibble(lon, acc) {\n  case lon {\n    [] -> 0\n    [n, ..rest] -> wibble(rest, acc + n)\n  }\n}\n"
---
----- SOURCE CODE
0 |
1 |pub fn wibble(lon, acc) {
2 |  case lon {
3 |    [] -> 0
4 |    [n, ..rest] -> wibble(rest, acc + n)
5 |  }
6 |}

----- COMPILED JAVASCRIPT
0 |//# sourceMappingURL=mod.mjs.map
1 |import { Empty as $Empty } from "../gleam.mjs";
2 |
3 |export function wibble(lon, acc) {
4 |  while (true) {
5 |    if (lon instanceof $Empty) {
6 |      return 0;
7 |    } else {
8 |      let n = lon.head;
9 |      let rest = lon.tail;
10 |      lon = rest;
11 |      acc = acc + n;
12 |    }
13 |  }
14 |}

----- SOURCE MAP
File: my/mod.mjs
Sources: mod.gleam
Mappings:
----- 


⏷
//# sourceMappingURL=mod.mjs.map
import { Empty as $Empty } from "../gleam.mjs";


----- 
pub fn wibble(lon, acc) {
  
⏷
export function wibble(lon, acc) {
  while (true) {
    
----- 
case 
⏷

----- 
lon {
    [] -> 
⏷
if (lon instanceof $Empty) {
      
----- 
0
    
⏷
return 0;
    } else {
      
----- 
[n, ..rest] -> 
⏷
let n = lon.head;
      let rest = lon.tail;
      
----- 
wibble(
⏷
lon = 
----- 
rest, 
⏷
rest;
      acc = 
----- 
acc + 
⏷
acc + 
----- 
n)
  }
}
⏷
n;
    }
  }
}
----- 


⏷


-----
